--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="Midterm.css">
+		<link rel="icon" type="logo/icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.postermywall.com%2Findex.php%2Fart%2Ftemplate%2Fbefabd60ad000b606ee1ba90e0900ff2%2Fbackground-design-template&psig=AOvVaw0nCscGMxcB786IzhlPtxfN&ust=1668059620328000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCKCn1Lq0oPsCFQAAAAAdAAAAABAJ">
 		<title>Web | CONTACTS</title>
 </head>
 <body>
