--- a/seniorhigh.html
+++ b/seniorhigh.html
@@ -19,7 +19,7 @@
 		<br>
 		<h1>"Senior Year"</h1>
 		<br>
-		<div class="a"><img src="https://scontent-hkt1-2.xx.fbcdn.net/v/t39.30808-6/301139577_441299828015162_5275062795226952426_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=e3f864&_nc_eui2=AeGxfoK8JvXXINvHdJoVcwqx3XBbHBeOO3fdcFscF447d51oAOI1tndz19hYnBGhMrbDMBjxIB7MQEgpof54Vkis&_nc_ohc=yQ-r48LY6HEAX9Jzqbf&_nc_ht=scontent-hkt1-2.xx&oh=00_AT974BA9ue4zFrdcpk0Gs_Vw0m_ZeI8mYwP2FuePqxQHMg&oe=635D0DF2" alt="shs" height="600" width="700"></div>
+		<div class="a"><img src="https://www.facebook.com/photo/?fbid=441299834681828&set=a.441299811348497" alt="shs" height="600" width="700"></div>
 		<br>
 		<h2>Though it's pandemic the true education is an immense topic.<br>
 			There are schools,books,teachers,experiences,reflections,decisions,<br>
