--- a/elementary.html
+++ b/elementary.html
@@ -45,7 +45,6 @@
 		&nbsp&nbsp<img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t1.18169-9/1509075_830729356969476_2662875787620057818_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=cdbe9c&_nc_eui2=AeGW_v0safWhPjasEIc2HpcEVudT-e0pZvZW51P57Slm9hLakuQf9Qa_UqeHCms19SX_Cf-rREO_975lswBZruX0&_nc_ohc=98l_Qoy3I0gAX-nfmYo&_nc_ht=scontent.fcgy2-1.fna&oh=00_AT94oiglKyfjbfm4BvxzkFRkXxIk8svEPqGT4i2wOrtLDw&oe=63765C48" alt="elementary" height="400" width="400"></div>
 		<br>	
 		<br>	
-		<div class="a"><img src="https://scontent.fmnl25-5.fna.fbcdn.net/v/t39.30808-6/310161577_114705698088211_2285220281282759769_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=e3f864&_nc_eui2=AeECTNiqBdNu12VlPCYdf6HBTAIQ-XJ-hRpMAhD5cn6FGvv8JbLI-ygBs0-OW43QWblK9HcCxo84cSCAj0vZuAKV&_nc_ohc=JCU4QgFZrSsAX8qPT-d&_nc_ht=scontent.fmnl25-5.fna&oh=00_AT8lJCmtBhoVneN5JEfmeZJuPGBoUUD9t9wOBTQJxGPwXg&oe=635CFB4F" alt="elementary" height="400" width="400">&nbsp&nbsp
-		&nbsp&nbsp<img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t1.18169-9/10429502_764032586972487_7634655129946071204_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=cdbe9c&_nc_eui2=AeGXFNqRmEufbUGrjG-hoIJQZ5rTQcY6EFxnmtNBxjoQXL5JS7EtdnEdHx4u231pkWi0zekqXMSVsZ12g3jAfU0S&_nc_ohc=E2v6n53mEXUAX8JBISQ&_nc_ht=scontent.fcgy2-1.fna&oh=00_AT_T7u9vHybsvec2O9cH_rgbelrZ8y9Nynqvjq2Nnrsk2Q&oe=63771B1C" alt="elementary" height="400" width="400"></div>
+		<div class="a"><img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t1.18169-9/10429502_764032586972487_7634655129946071204_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=cdbe9c&_nc_eui2=AeGXFNqRmEufbUGrjG-hoIJQZ5rTQcY6EFxnmtNBxjoQXL5JS7EtdnEdHx4u231pkWi0zekqXMSVsZ12g3jAfU0S&_nc_ohc=E2v6n53mEXUAX8JBISQ&_nc_ht=scontent.fcgy2-1.fna&oh=00_AT_T7u9vHybsvec2O9cH_rgbelrZ8y9Nynqvjq2Nnrsk2Q&oe=63771B1C" alt="elementary" height="400" width="400"></div>
 </body>
 </html>
