--- a/juniorhigh.html
+++ b/juniorhigh.html
@@ -12,7 +12,8 @@
 	     <a href="index.html">HOME</a>
     	     <a href="elementary.html">Elementary</a>
     	     <a href="juniorhigh.html">Junior High</a>
-    	     <a href="about.html">About</a>
+    	     <a href="seniorhigh.html">Senior High</a>
+	     <a href="about.html">About</a>
     	     <a href="contacts.html">Contacts</a>
 	</nav>
 		<br>
