--- a/about.html
+++ b/about.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 	<nav>
-		<a href="index.html">HOME</a>
-        <a href="elementary.html">Elementary</a>
-        <a href="juniorhigh.html">Junior High</a>
-        <a href="about.html">About</a>
-        <a href="contacts.html">Contacts</a>
+	    <a href="index.html">HOME</a>
+            <a href="elementary.html">Elementary</a>
+            <a href="juniorhigh.html">Junior High</a>
+            <a href="seniorhigh.html">Senior High</a>
+	    <a href="about.html">About</a>
+            <a href="contacts.html">Contacts</a>
 	</nav>
 		<br>
 <div class="a"><h1>"My Hobbies"</h1></div>
