--- a/Seniorhigh.html
+++ b/Seniorhigh.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 	<nav>
-	<a href="Index.html">HOME</a>
-    <a href="Elementary.html">ELEMENTARY</a>
-    <a href="Juniorhigh.html">JUNIOR HIGH</a>
-    <a href="Seniorhigh.html">SENIOR HIGH</a>
-    <a href="About.html">ABOUT</a>
-    <a href="Contacts.html">CONTACTS</a>
+	   <a href="index.html">HOME</a>
+           <a href="elementary.html">Elementary</a>
+           <a href="juniorhigh.html">Junior High</a>
+           <a href="seniorhigh.html">Senior High</a>
+           <a href="about.html">About</a>
+           <a href="contacts.html">Contacts</a>
 	</nav>
 		<br>
 		<h1>"Senior Year"</h1>
