--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 	<nav>
         <a href="index.html">HOME</a>
-		&nbsp&nbsp&nbsp
+		&nbsp&nbsp&nbsp&nbsp
         <a href="elementary.html">Elementary</a>
-		&nbsp&nbsp&nbsp
+		&nbsp&nbsp&nbsp&nbsp
         <a href="juniorhigh.html">Junior High</a>
-		&nbsp&nbsp&nbsp
+		&nbsp&nbsp&nbsp&nbsp
         <a href="about.html">About</a>
-		&nbsp&nbsp&nbsp
+		&nbsp&nbsp&nbsp&nbsp
         <a href="contacts.html">Contacts</a>
 	</nav>
 		<br>
